--- a/09-correlations.Rmd
+++ b/09-correlations.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(
 
 A correlation is performed when we want to investigate potential relationships between variables from the same sample. This does not mean that one variable explains the other, we arrive at that through the use of regression, as seen in Chapter 8. Like all statistical tests, correlation requires a series of assumptions as well:
 
-* pairwise data
+* pair-wise data
 * absence of outliers
 * linearity
 * normality of distribution
@@ -32,7 +32,7 @@ library(corrplot)
 ecklonia <- read_csv("data/ecklonia.csv")
 ```
 
-We will also create a subsetted version of our data by removing all of the categorical variables. If we have a dataframe where each column represents pairwise continuous/ordinal measurements with all of the other columns we may very quickly and easily perform a much wider range of correlation analyses.
+We will also create a subsetted version of our data by removing all of the categorical variables. If we have a dataframe where each column represents pair-wise continuous/ordinal measurements with all of the other columns we may very quickly and easily perform a much wider range of correlation analyses.
 
 ```{r}
 ecklonia_sub <- ecklonia %>% 
@@ -41,7 +41,7 @@ ecklonia_sub <- ecklonia %>%
 
 ## Pearson correlation
 
-When the values we are comparing are continuous, we may use a Pearson test. This is the default and so requires little work on our end. The resulting statistic from this test is known as the correlation coefficent.
+When the values we are comparing are continuous, we may use a Pearson test. This is the default and so requires little work on our end. The resulting statistic from this test is known as the correlation coefficient.
 
 ```{r}
 # Perform correlation analysis on two specific variables
@@ -52,7 +52,7 @@ cor.test(x = ecklonia$stipe_length, ecklonia$frond_length,
     use = "everything", method = "pearson")
 ```
 
-Above we have tested the correlation between the length of _Ecklonia maxima_ stipes and the length of their fronds. A perfect positive (negative) relationship would produce a value of 1 (-1), whereas no relationship would produce a value of 0. The result above, `cor = 0.65` is relatively strong. That being said, should our dataset contain multiple variables, as `ecklonia` does, we may investigate all of the correlations simultaneously. Remember that in order to do so we want to ensure that we may perform the same test on each of our paired variables. In this case we will use `ecklonia_sub` as we know that it contains only continuous data and so are appropriate for use with a Pearson test. By default R will use all of the data we give it and perform a Pearson test so we do not need to specify any further arguments. Note however that this will only output the correlation coefficents, and does not produce a full test of each correlation. This will however be useful for us to have just now.
+Above we have tested the correlation between the length of _Ecklonia maxima_ stipes and the length of their fronds. A perfect positive (negative) relationship would produce a value of 1 (-1), whereas no relationship would produce a value of 0. The result above, `cor = 0.65` is relatively strong. That being said, should our dataset contain multiple variables, as `ecklonia` does, we may investigate all of the correlations simultaneously. Remember that in order to do so we want to ensure that we may perform the same test on each of our paired variables. In this case we will use `ecklonia_sub` as we know that it contains only continuous data and so are appropriate for use with a Pearson test. By default R will use all of the data we give it and perform a Pearson test so we do not need to specify any further arguments. Note however that this will only output the correlation coefficients, and does not produce a full test of each correlation. This will however be useful for us to have just now.
 
 ```{r}
 ecklonia_pearson <- cor(ecklonia_sub)
@@ -77,7 +77,7 @@ cor.test(ecklonia$length, ecklonia$digits)
 
 ## Kendall rank correlation
 
-This test will work for both continuous and ordinal data. A sort of dealers choic of correlation tests. It's main purpose is to allow us to perform a correlation on non-normally distributed data. Let's look at the normality of our `ecklonia` variables and pull out those that are not normal in order to see how the results of this test may differ from our Pearson tests.
+This test will work for both continuous and ordinal data. A sort of dealers choice of correlation tests. It's main purpose is to allow us to perform a correlation on non-normally distributed data. Let's look at the normality of our `ecklonia` variables and pull out those that are not normal in order to see how the results of this test may differ from our Pearson tests.
 
 ```{r}
 ecklonia_norm <- ecklonia_sub %>% 
@@ -90,7 +90,7 @@ ecklonia_norm
 From this analysis we may see that the values for primary blade length are not normally distributed. In order to make up for this violation of our assumption of normality we may use the Spearman test.
 
 ```{r}
-cor.test(ecklonia$primary_blade_length, ecklonia$primary_blade_width)
+cor.test(ecklonia$primary_blade_length, ecklonia$primary_blade_width, method = "kendall")
 ```
 
 ## One panel visual
@@ -111,11 +111,11 @@ ggplot(data = ecklonia, aes(x = stipe_length, y = frond_length)) +
   theme_pubclean()
 ```
 
-Just by eyeballing this scatterplot it should be clear that these data tend to increase at a roughly similar rate. Our Pearson r value is an indication of what that is.
+Just by eye-balling this scatterplot it should be clear that these data tend to increase at a roughly similar rate. Our Pearson r value is an indication of what that is.
 
 ## Multiple panel visual
 
-But why stop at one panel? It is relatively straightforward to quickly plot correlation results for all of our variables in one go. In order to show which variables correlate most whith which other variables all at once, without creating chaos, we will create what is known as a heat map. This visualisation uses a range of colours, usually blue to red, to demonstrate where more of something is. In this case, we use it to show where more correlation is occurring between morphometric properties of the kelp _Ecklonia maxima_.
+But why stop at one panel? It is relatively straightforward to quickly plot correlation results for all of our variables in one go. In order to show which variables correlate most with which other variables all at once, without creating chaos, we will create what is known as a heat map. This visualisation uses a range of colours, usually blue to red, to demonstrate where more of something is. In this case, we use it to show where more correlation is occurring between morphometric properties of the kelp _Ecklonia maxima_.
 
 ```{r, fig.cap="Correlation plot showing the strength of all correlations between all variables as a scale from red (negative) to blue (positive)."}
 corrplot(ecklonia_pearson, method = "circle")
