--- a/05-distributions.Rmd
+++ b/05-distributions.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(
 Therefore, we must next learn about the different types of data distributions we are likely to encounter in the wild.
 
 ## Discrete distributions
-A discrete random variable has a finite or countable number of possible values. As the name suggests, it models integer data. Below we provide options to generate and visualise data belonging to several classes of discrete distributions. Later (Chapter X) we will learn how to transform these data prior to performing the appropriate statistical analysis.
+A discrete random variable has a finite or countable number of possible values. As the name suggests, it models integer data. Below we provide options to generate and visualise data belonging to several classes of discrete distributions. Later (Chapter 11) we will learn how to transform these data prior to performing the appropriate statistical analysis.
 
 ### Bernoulli distribution
 A Bernoulli random variable, $x$, takes the value 1 with probability $p$ and the value 0 with probability $q=1−p$. It is used to represent data resulting from a *single* experiment with binary (yes or no; black or white; positive or negative; success or failure; dead or alive;) outcomes, such as a coin toss---there are only two options, heads or tails. Nothing else. Here, $p$ represents the probability of the one outcome and $q$ the probability of the other outcome. The distribution of the possible outcomes, $x$, is given by:
@@ -445,7 +445,7 @@ p
 \begin{center}
 \includegraphics[width=0.7\linewidth]{figures/Boxplot_vs_PDF.png}
 \end{center}
-\caption{Boxplot and probability density function of a normal distribution *N*(0, σ^2^). Credit: wikipedia/Probability_density_function.}
+\caption{Boxplot and probability density function of a normal distribution. Credit: Wikipedia.}
 \end{figure}
 
 ### Uniform distribution
