--- a/10-confidence.Rmd
+++ b/10-confidence.Rmd
@@ -10,7 +10,11 @@ knitr::opts_chunk$set(
 )
 ```
 
-A confidence interval (CI) tells us within what range we may be certain to find the true mean from which any sample has been taken. To calculate a confidence interval requires three things:  
+One use of confidence intervals (CI) is to tell us within what range we may be (95\%) certain to find the true mean from which any sample has been taken. When we use CI to compare different sample sets we take that range to show us how confident we may be that the effect between these two things is significantly different from zero.
+
+## Calculating confidence
+
+To calculate a confidence interval for a single sample set requires three things:  
 
 ```{r}
 # First we set the sample mean
@@ -23,13 +27,13 @@ sample_sd <- 2
 sample_n <- 20
 ```
 
-Once we know these things we must then use the following formula to calculate th CI:
+Once we know these things we must then use the following formula to calculate the CI from a normal distribution:
 
 ```{r}
 error <- qnorm(0.975)*sample_sd/sqrt(sample_n)
 ```
 
-With the CI known, we then substract/add it from the sample mean in order to find the upper and lower limits:
+With the CI known, we then subtract/add it from the sample mean in order to find the upper and lower limits:
 
 ```{r}
 lower <- sample_mean-error
@@ -37,4 +41,88 @@ upper <- sample_mean+error
 lower
 upper
 ```
+These upper and lower limits may then be used easily within a figure.
 
+```{r, fig.cap="A very basic figure showing confidence intervals (CI) for a random normal distribution."}
+# Load libraries
+library(tidyverse)
+
+# Create dummy data
+r_dat <- data.frame(value = rnorm(n = 20, mean = 10, sd = 2),
+                    sample = rep("A", 20))
+
+# Create basic plot
+ggplot(data = r_dat, aes(x = sample, y = value)) +
+  geom_errorbar(aes(ymin = lower, ymax = upper)) +
+  geom_jitter(colour = "firebrick1")
+```
+
+> **Task:** How would we apply this to more than one sample set? Do so now.
+
+## CI of compared means
+
+AS stated above, we may also use CI to investigate the difference in means between two or more sample sets of data. We have already seen this in Chapter 7, ANOVA, but we shall look at it again here with our now expanded understanding of the concept.
+
+```{r, fig.cap="Results of a post-hoc Tukey test showing the confidence interval for the effect size between each group."}
+# First calculate ANOVA of seapl length of different iris species
+iris_aov <- aov(Sepal.Length ~ Species, data = iris)
+
+# Then run a Tukey test
+iris_Tukey <- TukeyHSD(iris_aov)
+
+# Lastly use base R to quickly plot the results
+plot(iris_Tukey)
+```
+
+> **Task:** Judging from the figure above, which species have significantly different sepal lengths?
+
+## Harrell plots
+
+The most complete use of CI that we have seen to date is the Harrell plot. This type of figure shows the distributions of each sample set in the data as boxplots in a lower panel. In the panel above those boxplots it then lays out the results of a post-hoc Tukey test. This very cleanly shows both the raw data as well as high level statistical results of the comparisons of those data. Thanks to the magic of the Internet we may create these figures with a single line of code. This does however require that we load several new libraries.
+
+```{r, fig.cap="Harrell plot showing the distributions of stipe lengths (cm) of the kelp _Ecklonia maxima_ at two different sites in the bottom panel. The top panel shows the confidence interval of the effect of the difference between these two sample sets based on a post-hoc Tukey test."}
+# The easy creation of these figures has quite a few dependencies
+library(lsmeans)
+library(Hmisc)
+library(broom)
+library(car)
+library(data.table)
+library(cowplot)
+source("data/fit_model.R")
+source("data/make_formula_str.R")
+source("data/HarrellPlot.R")
+
+# Load data
+ecklonia <- read_csv("data/ecklonia.csv")
+
+# Create Harrell Plot
+HarrellPlot(x = "site", y = "stipe_length", data = ecklonia, short = T)[1]
+```
+
+> **Task:** There are a lot of settings for `HarrePlot()`, what do some of them do?
+
+The above figure shows that the CI of the difference between stipe lengths (cm) at the two sites does not cross 0. This means that there is a significant difference between these two sample sets. But let's run a statistical test anyway to check the results.
+
+```{r}
+# assumptions
+ecklonia %>% 
+  group_by(site) %>% 
+  summarise(stipe_length_var = var(stipe_length),
+            stipe_length_Norm = as.numeric(shapiro.test(stipe_length)[2]))
+# We fail both assumptions...
+
+# non-parametric test
+wilcox.test(stipe_length ~ site, data = ecklonia)
+```
+
+The results of our Wilcox rank sum test, unsurprisingly, support the output of `HarrelPlot()`.
+
+## Exercises
+
+### Exercise 1
+
+Load a new dataset and create a Harrell plot from it based on values of your choosing. What does the Harrell plot show?
+
+### Exercise 2
+
+Check the results of the Harrell plot with the appropriate statistical test.
