--- a/05-distributions.Rmd
+++ b/05-distributions.Rmd
@@ -12,6 +12,12 @@ knitr::opts_chunk$set(
 # webshot::install_phantomjs()
 ```
 
+```{r, echo=FALSE, eval=TRUE, message=FALSE, include=FALSE}
+library(tidyverse)
+library(plotly)
+library(Rlab)
+```
+
 Therefore, we must next learn about the different types of data distributions we are likely to encounter in the wild.
 
 ## Discrete distributions
@@ -28,11 +34,7 @@ f(x;p)=
   \end{cases}
 $$
 
-```{r, echo=FALSE, eval=FALSE}
-library(tidyverse)
-library(plotly)
-library(Rlab)
-
+```{r, echo=FALSE, eval=TRUE}
 # Create base distributions
 set.seed(666)
 bern_dat <- data.frame(dist = c(rbern(10, 0.1), rbern(100, 0.1), rbern(1000, 0.1),
@@ -90,7 +92,7 @@ A binomial random variable, $x$, is the sum of $n$ independent Bernoulli random 
 
 $$f(x;n,p)= {n\choose x}p^{x}(1-p)^{n-x}$$
 
-```{r, echo=FALSE, eval=FALSE}
+```{r, echo=FALSE, eval=TRUE}
 # Create base distributions
 set.seed(666)
 binom_dat <- data.frame(dist = c(rbinom(10, 10, 0.1), rbinom(100, 10, 0.1), rbinom(1000, 10, 0.1),
@@ -157,7 +159,7 @@ $$f(x;n,r,p)= {x+r-1\choose x}p^{x}(1-p)^{r}$$
 
 where $x$ is the number of successes, $r$ is the number of failures, and $p$ is the probability of success
 
-```{r, echo=FALSE, eval=FALSE}
+```{r, echo=FALSE, eval=TRUE}
 # Create base distributions
 set.seed(666)
 nbinom_dat <- data.frame(dist = c(rnbinom(10, 10, 0.1), rnbinom(100, 10, 0.1), rnbinom(1000, 10, 0.1),
@@ -222,7 +224,7 @@ A geometric random variable, $x$, represents the number of trials that are requi
 
 $$f(x;p)=(1-p)^{x}p$$
 
-```{r, echo=FALSE, eval=FALSE}
+```{r, echo=FALSE, eval=TRUE}
 # Create base distributions
 set.seed(666)
 geom_dat <- data.frame(dist = c(rgeom(10, 0.1), rgeom(100, 0.1), rgeom(1000, 0.1),
@@ -281,7 +283,7 @@ A Poisson random variable, $x$, tallies the number of events occurring in a fixe
 
 $$f(x;\lambda)=\frac{\lambda^{x}e^{-\lambda}}{x!}$$
 
-```{r, echo=FALSE, eval=FALSE}
+```{r, echo=FALSE, eval=TRUE}
 # Create base distributions
 set.seed(666)
 pois_dat <- data.frame(dist = c(rpois(10, 10), rpois(100, 10), rpois(1000, 10),
@@ -340,7 +342,7 @@ p
 
 Another name for this kind of distribution is a Gaussian distribution. A random sample with a Gaussian distribution is normally distributed. These values are identically distributed and independent---we say they are independent and identically distributed random variables (i.i.d.), and they have an expected mean given by $\mu$ (or $\hat{x}$ in Chapter 3.2.1) and a finite variance given by $\sigma^{2}$ (or $S^{2}$ in Chapter 3.3.1); if the number of samples drawn from a population is sufficiently large, the estimated mean and SD will be indistinguishable from the population (as per the central limit theorem).
 
-```{r, echo=FALSE, eval=FALSE}
+```{r, echo=FALSE, eval=TRUE}
 # library(animation)
 # library(e1071)
 
@@ -379,6 +381,10 @@ Another name for this kind of distribution is a Gaussian distribution. A random 
 # saveGIF(animate_hist())
 # system.time(saveGIF(animate_hist(), interval = 0.5, ani.width = 600, movie.name = "hist_norm_n.gif")) ## ~12 seconds
 knitr::include_graphics("figures/hist_norm_n.gif")
+```
+
+```{r rmarkdown, echo = FALSE}
+knitr::include_graphics("figures/Standard_deviation_diagram.png")
 ```
 
 ```{r, echo=FALSE, eval=FALSE}
@@ -452,7 +458,7 @@ p
 
 The continuous uniform distribution is sometime called a rectangular distribution. Simply, it states that all measurements of the same magnitude included with this distribution are equally probable. This is basically random numbers.
 
-```{r, echo=FALSE, eval=FALSE}
+```{r, echo=FALSE, eval=TRUE}
 # Create base distributions
 set.seed(666)
 unif_dat <- data.frame(dist = c(runif(10, 0, 10), runif(100, 0, 10), runif(1000, 0, 10),
@@ -510,7 +516,7 @@ p
 
 This is a continuous probability distribution that arises when estimating the mean of a normally distributed population in situations where the sample size is small and population standard deviation is unknown. It is used in the statistical significance testing between the means of different sets of samples, and not much so in the modelling of natural phenomena.
 
-```{r, echo=FALSE, eval=FALSE}
+```{r, echo=FALSE, eval=TRUE}
 # Create base distributions
 set.seed(666)
 t_dat <- data.frame(dist =    c(rt(10, 5, 0), rt(100, 5, 0), rt(1000, 5, 0),
@@ -574,7 +580,7 @@ p
 
 Mostly used in hypothesis testing, but not to encapsulate the distribution of data drawn to represent natural phenomena.
 
-```{r, echo=FALSE, eval=FALSE}
+```{r, echo=FALSE, eval=TRUE}
 # Create base distributions
 set.seed(666)
 chisq_dat <- data.frame(dist = c(rchisq(10, 5, 0), rchisq(100, 5, 0), rchisq(1000, 5, 0),
@@ -638,7 +644,7 @@ p
 
 This is a probability distribution that describes the time between events in a Poisson point process, i.e., a process in which events occur continuously and independently at a constant average rate.
 
-```{r, echo=FALSE, eval=FALSE}
+```{r, echo=FALSE, eval=TRUE}
 # Create base distributions
 set.seed(666)
 exp_dat <- data.frame(dist = c(rexp(10, 1), rexp(100, 1), rexp(1000, 1),
@@ -693,7 +699,7 @@ p
 
 ### F distribution
 
-```{r, echo=FALSE, eval=FALSE}
+```{r, echo=FALSE, eval=TRUE}
 # Create base distributions
 set.seed(666)
 f_dat <- data.frame(dist =     c(rf(10, 5, 5), rf(100, 5, 5), rf(1000, 5, 5),
@@ -755,7 +761,7 @@ p
 
 ### Gamma distribution
 
-```{r, echo=FALSE, eval=FALSE}
+```{r, echo=FALSE, eval=TRUE}
 # Create base distributions
 set.seed(666)
 gamma_dat <- data.frame(dist = c(rgamma(10, 1), rgamma(100, 1), rgamma(1000, 1),
@@ -810,7 +816,7 @@ p
 
 ### Beta distribution
 
-```{r, echo=FALSE, eval=FALSE}
+```{r, echo=FALSE, eval=TRUE}
 # Create base distributions
 set.seed(666)
 beta_dat <- data.frame(dist = c(rbeta(10, 1, 1), rbeta(100, 1, 1), rbeta(1000, 1, 1),
